# particle-system-js

./: .gitignore  .prettierignore  CMakeLists.txt  README.md  imgui.txt  index.html  package.json  webpack.config.js
.github/workflows/: deploy.yml
public/: index.html
scripts/: build.js  build.ts
scripts/src/: args.ts  command.class.ts  commands.ts  env.ts  folder.class.ts  folders.ts  is-windows.ts
src/: index.js
src/particle-system/: index.js
src/particle-system/assets/shaders/: Color.frag.glsl  Color.vert.glsl
src/particle-system/src/: App.cpp  Bridge.hpp  main.cpp
src/particle-system/src/math/: Transform.cpp  Transform.hpp
src/particle-system/src/objects/: EmitParticleSystem.cpp  EmitParticleSystem.hpp  ParticleSystemCPU.cpp  ParticleSystemCPU.hpp  ParticleSystemCPUandGPU.cpp  ParticleSystemCPUandGPU.hpp  ParticleSystemException.hpp  SceneObject.cpp  SceneObject.hpp
src/particle-system/src/renderer/: BufferElement.cpp  BufferElement.hpp  BufferLayout.cpp  BufferLayout.hpp  Camera.cpp  Camera.hpp  CameraException.hpp  DrawData.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Renderer.cpp  Renderer.hpp  RendererError.hpp  Shader.cpp  Shader.hpp  ShaderError.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/particle-system/src/scenes/: Sandbox.cpp  Sandbox.hpp  Scene.cpp  Scene.hpp
src/particle-system/src/scenes/cpu/: EasyTestCPU.cpp  EasyTestCPU.hpp  HardTestCPU.cpp  HardTestCPU.hpp  NormalTestCPU.cpp  NormalTestCPU.hpp
src/particle-system/src/utils/: GLInfo.cpp  GLInfo.hpp  Resources.cpp  Resources.hpp
src/particle-system/src/windows/: Environment.cpp  Environment.hpp  Performance.cpp  Performance.hpp  SceneSelector.cpp  SceneSelector.hpp  SceneVariables.cpp  SceneVariables.hpp  Window.hpp  WindowsManager.cpp  WindowsManager.hpp
static/assets/: ParticleSystem.21c1e2774d6771287f28.wasm  ParticleSystem.4f546e670effe7ebc312.wasm  ParticleSystem.5d89247e8491d5109f05.wasm  ParticleSystem.98d095e68c3d3fae59af.wasm
static/js/: main.25ec7181ff2b839d4b36.js  main.507b18e710527eb36dd7.js  main.53acf5d25dc9ba6ae1b3.js  main.f6cef26f73726cddec29.js
